--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -17,6 +17,7 @@
     background-color: #111;
     padding: 32px 0;
     margin-top: 40px;
+    display: none;
 
     @media screen and (max-width: 768px) {
       padding: 32px;
