--- a/sass/product/vtex.product-list.scss
+++ b/sass/product/vtex.product-list.scss
@@ -11,10 +11,10 @@
 }
 
 .productName--minicart {
-  font-size: 12px;
-  color: #1c1c1c;
+  font-size: 14px;
+  color: #332C32;
   max-width: 199px;
-  line-height: 20px;
+  line-height: 18px;
   overflow: hidden;
   max-height: 40px;
 
@@ -33,15 +33,26 @@
     margin-top: 12px;
   }
   .productPrice--minicart {
-    font-size: 14px;
-    color: $secondary-dark;
-    font-weight: 600;
-    text-align: right;
+    font-size: 18px;
+    color: #332C32;
+    font-weight: bold;
+    padding-top: 8px;
+    text-align: start;
 
-    @include breakpoint('mobile') {
-      margin-left: 85px;
+  }
+}
+.quantitySelectorContainer--minicart{
+  display: flex;
+  &::after{
+    content: "";
+    transform: translateX(29px);
+    border-right: 1px solid #BEBEBE;
+
+    @include breakpoint("mobile"){
+      transform: translateX(14px);
     }
   }
+  
 }
 
 .quantityDropdownContainer--minicart,
@@ -66,23 +77,24 @@
   }
 
   :global(.vtex-dropdown__arrow) {
-    color: #000;
+    color: #332C32;
   }
 
   :global(.vtex-dropdown__container) {
-    height: 40px;
-    background-color: $white;
-    max-width: 80px;
+    height: 30px;
+    background-color: #F6F6F6;
+    border-color: #F6F6F6;
+    max-width: 58px;
     @include breakpoint('mobile') {
       max-width: 69px;
     }
   }
 
   :global(.vtex-dropdown__button) {
-    padding: 12px 10px 12px 10px;
-    @include breakpoint('mobile') {
-      padding: 10px;
-    }
+    padding: 2px;
+    font-size: 16px;
+    line-height: 19;
+    color: #332C32;
   }
 }
 // Minicart end
