[feature/productsummary] product summary adjustments

--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -90,6 +90,11 @@
     &--home-blog {
       margin-bottom: 2rem;
     }
+    &--home-section06-title {
+      display: flex;
+      align-items: center;
+      padding-top: 28px;
+    }
   }
 
   &--home-blog {
