--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -1,4 +1,14 @@
 .container {
+  &--home-section-title,  &--home-section04-title {
+    justify-content: center;
+  }
+  &--home-section-title{
+    display: flex;
+    justify-content: flex-start;
+    @media screen and (max-width: 768px) {
+      justify-content: center;
+    }
+  }
   .heading {
     &--first-section-title {
       margin: 64px 0 96px;
@@ -17,8 +27,21 @@
         margin: 24px auto 0;
       }
     }
-
-    &--home-section-title {
+    
+    &--home-section-title{
+      font-size: 40px;
+      line-height: 48px;
+      font-weight: 500;
+      margin: 0;
+      @media screen and (max-width: 768px) {
+        font-size: 28px;
+        line-height: 32px;
+      }
+    }
+    &--home-section04-title {
+      font-size: 40px;
+      line-height: 48px;
+      font-weight: 300;
       text-align: center;
       height: 1rem;
       color: #332c32;
