Feat: Estilizando o footer, introduzindo disclosure para a parte de cima do footer e alinhando itens, faltando estilizar o disclosure

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -61,5 +61,6 @@ $primary-text-dark: #1D1E2C;
 $background-blue-black: #232946;
 $background-categorie-hover: #E0E9F3;
 $background-footer: #292F33;
+$background-bottom-footer: #17171B;
 $blue-active: #291660;
 $blue-hover: #0B1658;
