--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -38,6 +38,10 @@
     }
   }
 
+  &--footer-aboutUs {
+    color: $white;
+  }
+
   &--footer-upperFooterTitle {
     font-size: 20px;
     font-weight: 500;
