--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -85,11 +85,20 @@
 }
 
 .flexRowContent--searchControlsMobile {
-  @media screen and (max-width: 768px) {
+  @include breakpoint('mobile') {
     display: flex;
     align-items: center;
     padding: 0 16px;
-    justify-content: space-between;
+    justify-content: center;
+    flex-direction: row-reverse;
+
+    .stretchChildrenWidth {
+      width: 50%;
+    }
+
+    .stretchChildrenWidth:first-child {
+      width: 0;
+    }
   }
 }
 
