--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -1,4 +1,5 @@
 @import '../variables';
+@import '../media-queries';
 
 .paragraph {
   &--footer-paymentMethodText {
@@ -19,6 +20,12 @@
   &--footer-PaymentMethodsDescription {
     color: $white;
     padding: 10px 15px 10px;
+  }
+
+  &--footer-PaymentMethodsDescription {
+    @include breakpoint("mobile"){
+      border-top: 1px solid $white;
+    }
   }
 
   &--footer-PaymentMethodsTitle {
