--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -51,6 +51,9 @@
   }
 }
 
+.minicartProductListContainer{
+  overflow-x: hidden;
+}
 .drawerContent--minicart-background {
   background-color: #FFF;
 }
@@ -104,12 +107,12 @@
 
 //minicart container button
 :global(.vtex-product-list-0-x-item--remove-button-cart){
-  width: 11rem !important;
+  width: 11.2rem !important;
   display: flex;
   align-items: center;
  
   @include breakpoint ("mobile"){
-    transform: translateX(-35px);
+    transform: translateX(-42px);
   }
 
    :global(.vtex-product-list-0-x-removeButton--remove-button-cart){
@@ -121,6 +124,7 @@
       content: "Rimuovi articolo";
       font-size: 14px;
       color: #291660;
+      font-weight: bold;
     }
 
     :global(.vtex-product-list-0-x-deleteIcon--remove-button-cart){
@@ -130,9 +134,9 @@
 }
 
 :global(.vtex-product-list-0-x-productImage){
-  height: 110px;
+  height: 80px;
 
   @include breakpoint("mobile"){
-    height: 80px;
+    height: 70px;
   }
 }
