--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -16,11 +16,6 @@
   margin: auto 32px;
   padding-top: 0;
 
-  @media screen and (max-width: 768px) {
-    padding: 0;
-    margin: auto;
-  }
-
   .showingProductsCount {
     font-size: 16px;
     font-weight: 400;
@@ -47,7 +42,7 @@
 
   @include breakpoint('mobile') {
     position: absolute;
-    transform: translate(-262px, 24px);
+    transform: translate(-280px, 48px);
   }
 }
 
@@ -57,54 +52,68 @@
   margin: 16px 0 16px;
   position: relative;
 
-  &::after {
-    @media screen and (max-width: 768px) {
-      content: '';
-      width: 2px;
-      height: 16px;
-      display: block;
-      background: #ddd;
-      top: 50%;
-      right: 16px;
-      position: absolute;
-      transform: translateY(-50%);
-    }
+  @include breakpoint("mobile") {
+    margin-block: auto;
   }
+  // &::after {
+  //   @media screen and (max-width: 768px) {
+  //     content: '';
+  //     width: 2px;
+  //     height: 16px;
+  //     display: block;
+  //     background: #ddd;
+  //     top: 50%;
+  //     right: 16px;
+  //     position: absolute;
+  //     transform: translateY(-50%);
+  //   }
+  // }
 
   .orderByDropdown {
     justify-content: flex-end;
     display: flex;
     margin-right: 16px;
+    width: 100%;
+
+    @include breakpoint('mobile') {
+      justify-content: center;
+      height: 40px;
+      border: 1px solid #D8D8D8;
+      border-left: none;
+      transform: translateY(-1px);
+      z-index: 3;
+    }
   }
 
   .orderByButton {
     background-color: transparent;
     padding: 12px 0 12px;
     border: none;
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       width: auto;
-      margin: 0 30px;
+      //margin: 0 30px;
       display: flex;
-      flex-direction: row-reverse;
+      flex-direction: row;
     }
 
     .filterPopupArrowIcon {
-      @media screen and (max-width: 768px) {
+      @include breakpoint('mobile') {
         padding: 0 8px;
+        padding-top: 2px;
       }
 
       .caretIcon {
         width: 20px;
         height: 20px;
-        @media screen and (max-width: 768px) {
-          background: url('assets/icons/arrowUpAndDown.png');
-          background-size: cover;
-          width: 24px;
-          height: 24px;
-          background-repeat: no-repeat;
-          color: transparent;
-          background-position: center;
-        }
+        // @media screen and (max-width: 768px) {
+        //   background: url('assets/icons/arrowUpAndDown.png');
+        //   background-size: cover;
+        //   width: 24px;
+        //   height: 24px;
+        //   background-repeat: no-repeat;
+        //   color: transparent;
+        //   background-position: center;
+        // }
       }
     }
     .filterPopupTitle {
@@ -117,9 +126,22 @@
       text-align: left;
       color: transparent;
 
-      @media screen and (max-width: 768px) {
+      @include breakpoint('mobile') {
         font-size: 0;
         width: auto;
+      }
+
+      &::after {
+        @include breakpoint('mobile') {
+          content: "Sort by";
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 19px;
+          color: #332C32;
+          position: absolute;
+          left: 55px;
+          top: 10px;
+        }
       }
 
       .orderByText {
@@ -131,6 +153,14 @@
         position: absolute;
         text-transform: lowercase;
         left: 82px;
+        
+
+        @include breakpoint('mobile') {
+          left: unset;
+          transform: translateY(-10px);
+          visibility: hidden;
+        }
+
         &::first-letter {
           text-transform: uppercase;
         }
@@ -181,7 +211,11 @@
   // }
 
   padding-bottom: 28px;
-  
+  @include breakpoint('mobile') {
+    border-bottom: none;
+    padding-bottom: 16px;
+  }
+
   :global(.vtex-slider__selector) {
     background: #2B126B;
     transform: translateY(1px);
@@ -206,8 +240,8 @@
     justify-content: space-between;
     transform: translateY(-63px);
 
-    @media screen and (max-width: 768px) {
-      height: 35px;
+    @include breakpoint('mobile') {
+      height: 20px;
     }
   }
   :global(.vtex-slider__dash) {
@@ -227,17 +261,17 @@
 
   //   }
 
-    &::before {
-      @media screen and (max-width: 768px) {
-        bottom: 14px;
-        content: "e defina uma faixa de valores para filtrar.";
-        text-indent: 136px;
-        position: absolute;
-        font-weight: 400;
-        font-size: 12px;
-        color: #444;
-    }
-  }
+  //   &::before {
+  //     @media screen and (max-width: 768px) {
+  //       bottom: 14px;
+  //       content: "e defina uma faixa de valores para filtrar.";
+  //       text-indent: 136px;
+  //       position: absolute;
+  //       font-weight: 400;
+  //       font-size: 12px;
+  //       color: #444;
+  //   }
+  // }
 }
 
 .seeMoreButton {
@@ -262,8 +296,14 @@
   }
 
   .filterPopupArrowIcon {
-    @media screen and (max-width: 768px) {
-      display: none;
+    @include breakpoint('mobile') {
+      visibility: hidden;
+
+      &::after {
+        visibility: visible;
+        content: url("assets/icons/icon_filter.svg");
+        padding-right: 8px;
+      }
     }
   }
 
@@ -272,6 +312,11 @@
     border: 2px solid #e30613;
     border-radius: 8px;
     height: auto;
+
+    @include breakpoint('mobile') {
+      border: none;
+      flex-direction: row-reverse;
+    }
   }
 
   .filterPopupTitle {
@@ -279,6 +324,14 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
+
+    @include breakpoint('mobile') {
+      color:#332C32;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19px;
+      text-transform: capitalize;
+    }
   }
 
   .filterIcon {
@@ -395,6 +448,10 @@
       }
     }
   }
+
+  .filtersWrapperMobile--filterMobile {
+    height: 40px;
+  }
   // .filtersWrapper {
   //   @include desktop {
   //     &:last-child {
@@ -412,19 +469,51 @@
   // }
 }
 
-@media screen and (max-width: 768px) {
+@include breakpoint('mobile') {
 
   .sidebar {
-    max-width: 312px;
+    //max-width: 312px;
     min-width: 312px;
 
     .accordionFilter {
-      padding-bottom: 10rem;
+      margin-bottom: 10rem;
+      margin-right: 16px;
+      margin-top: 64px;
+      overflow-y: auto;
+      overflow-x: hidden;
+      padding-bottom: 1rem;
 
+      &::-webkit-scrollbar {
+        width: 6px;
+        border-radius: 3px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: #B8B8B8;
+        border-radius: 3px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: #291660;
+        border-radius: 3px;
+      }
+
+
+      :global(.vtex-slider-container) {
+        transform: translateY(38px);
+        height: 10px;
+      }
+          
+        
       .filterAccordionBreadcrumbs {
-        margin-top: 3rem;
+        //margin-top: 3rem;
         border: none;
-        margin-bottom: 1rem;
+        display: none;
+        //margin-bottom: 1rem;
+
+        .filterBreadcrumbsContent--filterMobile {
+          display: none;
+        }
 
         .filterBreadcrumbsText--filterMobile {
           visibility: hidden;
@@ -452,6 +541,7 @@
 
       .accordionFilterContainer--filterMobile {
         padding-left: 1rem;
+        margin-right: 1rem;
 
         .accordionFilterItem--filterMobile {
           border-bottom-style: none;
@@ -462,10 +552,10 @@
           border-top: 2px solid #f2f2f2;
 
           .accordionFilterItemTitle--filterMobile {
-            color: #111;
-            font-size: 1rem;
-            line-height: 24px;
-            font-weight: 400;
+            color: #332C32;
+            font-size: 18px;
+            line-height: 21px;
+            font-weight: 500;
           }
         }
       }
@@ -479,25 +569,25 @@
           border: none;
 
           :global(.vtex-checkbox__label) {
-            padding-left: 1.5rem;
+            padding-left: 10px;
             font-size: 1rem;
-            font-weight: 300;
-            line-height: 24px;
-            letter-spacing: 0.01em;
-            color: #111;
+            font-weight: 400;
+            line-height: 19px;
+            // letter-spacing: 0.01em;
+            color: #332C32;
           }
 
           :global(.vtex-checkbox__inner-container) {
-            border: 2px solid #DDD;
-            border-radius: 6px;
-            height: 24px;
-            width: 24px;
+            //border: 2px solid #DDD;
+            border-radius: 2px;
+            height: 20px;
+            width: 20px;
           }
 
           :global(.vtex-checkbox__box-wrapper) {
             border-radius: 6px;
-            height: 24px;
-            width: 24px;
+            height: 20px;
+            width: 20px;
           }
 
           :global(.vtex-checkbox__input) {
@@ -518,37 +608,50 @@
           display: none;
         }
       }
+
+      :global(.vtex-slider) {
+        transform: translateX(10px);
+      }
+
+      :global(.vtex-slider__left-value), :global(.vtex-slider__right-value) {
+        font-size: 16px;
+        line-height: 19px;
+        color: #332C32;
+        border-bottom: 1px solid;
+      }
     }
 
     .filterButtonsBox {
       height: 9rem;
       padding-bottom: 43px;
+      border-top: 1px solid #CCC;
 
       .filterApplyButtonWrapper--filterMobile {
         width: 280px;
         margin-inline: auto;
         padding: 0;
+        padding-top: 10px;
         margin-bottom: 8px;
     
     
         :global(.vtex-button) {
-          background: #e30613;
-          border-radius: 8px;
+          background: #2B126B;
+          border-radius: 4px;
           padding: 12px 24px;
           :global(.vtex-button__label) {
-            font-weight: 600;
+            font-weight: 500;
             font-size: 14px;
             line-height: 16px;
             color: #FFF;
-            letter-spacing: 0.005em;
+            //letter-spacing: 0.005em;
             text-align: center;
             visibility: hidden;
             padding: 0;
             &::after {
-              content: "Filtrar";
+              content: "VEDI I RISULTATI";
               visibility: visible;
               transform: translateX(-30px);
-              text-transform: capitalize;
+              text-transform: uppercase;
             }
             //background: #e30613;
           }
@@ -588,17 +691,39 @@
         }
     
       }
+
+
+
     }
 
   }
 
   .closeIconButton {
-    transform: translate(-273px, 14px);
+    //content: url("assets/icons/icon_close.svg");
+    //transform: translate(-273px, 14px);
     background: white;
     padding: 5px 5px 1px;
-    border-radius: 15px;
+    //border-radius: 15px;
   }
+
+  .closeIcon {
+    width: 48px;
+    height: 48px;
+
+    // &::after {
+    //   visibility: visible;
+    //   content: url("assets/icons/icon_close.svg")
+    // }
+  }
+
 
 }
 
+
+.caretIcon--filterMobile {
+  @include breakpoint('mobile') {
+    width: 20px;
+    height: 20px;
+  }
+}
 
