[feature/searchPageBanner] Adjustment seo alignment

--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -45,6 +45,13 @@
   }
 }
 
+.flexRowContent--container-seo3 {
+  margin-bottom: 83px;
+  @include mobile {
+    margin-bottom: 44px;
+  }
+}
+
 
 .flexRow--full-banner-search {
   max-width: 980px;
