--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -236,6 +236,18 @@
     font-size: 24px;
     color: #5A40A4;
     font-weight: 600;
+    display: flex;
+    align-items: center;
+  }
+
+  .mobile-mega-menu-title:before {
+    content: "";
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    background-size: 25px;
+    background-image: url("data:image/svg+xml,%3Csvg xml:space='preserve' xmlns='http://www.w3.org/2000/svg' width='100' height='100' style='width:100%25;height:100%25;background-size:initial;background-repeat-y:initial;background-repeat-x:initial;background-position-y:initial;background-position-x:initial;background-origin:initial;background-color:initial;background-clip:initial;background-attachment:initial;animation-play-state:paused'%3E%3Cg style='transform-origin:50%25 50%25;transform:rotate(0deg) scale(1,1);animation-play-state:paused'%3E%3Cpath d='M47.657 9.879 7.5 50.035l40.157 40.157 8.031-8.031-26.446-26.447H92.5V44.356H29.242L55.688 17.91z' fill='%23323232' style='fill:%23323232;animation-play-state:paused' class='ldl-scale'/%3E%3C/g%3E%3C/svg%3E");
+    margin-right: 5px;
   }
 
   .mobile-mega-menu-items {
