feat(home-mobile): adjusted blog section for mobile

--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -151,6 +151,12 @@
     height: auto;
   }
 
+  &--home-blog {
+    @include breakpoint('mobile') {
+      align-items: center;
+    }
+  }
+
   .flexColChild {
     &--home-categories-showcase,
     &--categories-showcase,
