--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -1,4 +1,13 @@
+@import '../_media-queries.scss';
+@import '../_variables.scss';
+
 .container {
+  &--home-blog-subtitle {
+    @include breakpoint('mobile') {
+      margin-bottom: 4rem;
+    }
+  }
+
   .heading {
     &--first-section-title {
       margin: 64px 0 96px;
@@ -77,6 +86,11 @@
       line-height: 1.5rem;
       max-width: 25rem;
       margin: 2rem 0;
+
+      @include breakpoint('mobile') {
+        margin: 0 1rem;
+        text-align: center;
+      }
     }
 
     &--home-blog-title {
@@ -86,6 +100,10 @@
       font-size: 20px;
       font-weight: 500;
       line-height: 1.5rem;
+
+      @include breakpoint('mobile') {
+        margin: 0 0 1.25rem 1.5rem;
+      }
     }
 
     &--home-blog-text {
