--- a/sass/product/vtex.wish-list.scss
+++ b/sass/product/vtex.wish-list.scss
@@ -1,19 +1,16 @@
-// // @import '../_variables.scss';
-// // @import '../_media-queries.scss';
+@import '../_variables.scss';
+@import '../_media-queries.scss';
+
+.outline {
+    background: url(https://bricobravo.vtexassets.com/arquivos/ids/155409-22-22?v=637920420622130000&width=22&height=22&aspect=true);
+    background-size: contain;
+    height: 34px;
+    width: 34px;    
+    &:hover{
+        background-image: url(https://bricobravo.vtexassets.com/arquivos/ids/155411-22-22?v=637920420622130000&width=22&height=22&aspect=true);
+        background-repeat: no-repeat; 
+        padding-right: 0;  
+    }
+}
 
 
-// // .wishlistIconContainer {
-// //     display: flex;
-// //     justify-content: flex-end;
-// // }
-
-// .vtex-wish-list-0-x-wishlistIconContainer {
-//     display: flex;
-//     justify-content: flex-end;
-//     align-items: center;
-// }
-// // .vtex-flex-layout-0-x-flexRowContent--summaryTop .vtex-flex-layout-0-x-stretchChildrenWidth {
-// //     display: flex;
-// //     justify-content: flex-start;
-// //     align-items: center;
-// // }
