--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -1,4 +1,5 @@
-@import '../variables';
+@import '../_media-queries.scss';
+@import '../_variables.scss';
 
 .paragraph {
   &--footer-paymentMethodText {
@@ -8,7 +9,7 @@
     line-height: 24px;
     color: #111;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       margin: 0 auto;
       font-size: 14px;
       line-height: 24px;
@@ -20,7 +21,7 @@
     font-weight: 500;
     color: $white;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       margin: 0;
       font-size: 16px;
       line-height: 24px;
@@ -35,13 +36,13 @@
     line-height: 24px;
     letter-spacing: 0.01em;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       margin-bottom: 16px;
     }
   }
 
   &--middleFooterCol4Title {
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       display: none;
     }
   }
@@ -54,7 +55,7 @@
     line-height: 18px;
     max-width: 215.16px;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       display: none;
     }
   }
@@ -83,7 +84,7 @@
     color: #999;
     font-weight: 400;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       text-align: center;
     }
   }
@@ -104,6 +105,13 @@
     font-weight: 500;
     line-height: 33px;
     margin: 1.25rem 0;
+
+    @include breakpoint('mobile') {
+      height: 1.5rem;
+      font-size: 20px;
+      line-height: 1.5rem;
+      margin: 0 0 1.5rem;
+    }
   }
 
   &--upperFooterCategoriesTitle {
@@ -122,7 +130,7 @@
     font-size: 40px;
     font-weight: 300;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       margin: 0;
       font-size: 32px;
       line-height: 40px;
@@ -137,7 +145,7 @@
     line-height: 48px;
     text-align: center;
 
-    @media screen and (max-width: 768px) {
+    @include breakpoint('mobile') {
       font-size: 32px;
       line-height: 40px;
     }
