--- a/sass/footer/vtex.store-components.scss
+++ b/sass/footer/vtex.store-components.scss
@@ -1,3 +1,6 @@
+@import '../_media-queries.scss';
+@import '../_variables.scss';
+
 .imageElement {
   &--upperFooterBrands {
     border: 1px solid #f2f2f2;
@@ -7,6 +10,10 @@
     &:hover {
       opacity: 0.9;
       transition: ease-in-out 0.2s;
+    }
+
+    @include breakpoint('mobile') {
+      height: 3.75rem;
     }
   }
 }
