--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -97,9 +97,9 @@
     margin: 0;
     font-size: 16px;
     font-weight: 300;
-    color: #111;
-    line-height: 24px;
-    text-align: center;
+    color: $white;
+    line-height: 21px;
+    max-width: 316px;
   }
 
   &--aiwaInfoOne {
@@ -164,16 +164,16 @@
   }
 
   &--newsTitle {
-    font-size: 40px;
+    font-size: 24px;
     margin: 0 0 8px;
-    font-weight: 300;
-    color: #111;
-    line-height: 48px;
+    font-weight: 500;
+    color: $white;
+    line-height: 28px;
     text-align: center;
 
     @media screen and (max-width: 768px) {
       font-size: 32px;
-      line-height: 40px;
+      line-height: 28px;
     }
   }
 }
