Feita e estilizada a newsletter

--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -6,6 +6,7 @@
       height: 56px;
       border-radius: 8px;
       border: 2px solid #ccc;
+      width: 350px;
 
       @media screen and (max-width: 768px) {
         height: 48px;
@@ -18,23 +19,26 @@
     :global(.vtex-button) {
       background-color: transparent;
       border: none;
-      padding: 2px;
+      padding: 5px;
       &:hover {
         background-color: transparent;
       }
       :global(.vtex-button__label) {
         position: relative;
-        right: 100px;
+        right: 50px;
+        top: 10px;
+        padding: 0;
         &::before {
           content: "";
-          width: 30px;
-          height: 30px;
+          width: 24px;
+          height: 24px;
           background-repeat: no-repeat;
           background-size: 30px;
+          background-position: 0 -1px;
           background-image: url("data:image/svg+xml,%3Csvg width='22' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke='%232B126B' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cpath d='M1 8.17307646h16'/%3E%3Cpath stroke-linejoin='round' d='m10 15.3846149 8-7.17259295L10 .961538'/%3E%3C/g%3E%3C/svg%3E");
         }
         &:hover {
-          background-color: $blue-hover;
+          background-color: transparent;
         }
       }
       @media screen and (max-width: 768px) {
