--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -68,6 +68,29 @@
     }
   }
 
+  &--homeBottomSection {
+    background: #f6f6f6;
+  }
+
+  &--quemSomos-main {
+    margin-bottom: 5rem;
+  }
+
+  &--homeBottomSectionDesktop {
+    padding-bottom: 2.5rem;
+    background-color: #f6f6f6;
+  }
+
+  &--homeBottomSectionBrands {
+    margin-bottom: 1rem;
+  }
+
+  &--homeBottomSectionMobile {
+    @include breakpoint('mobile') {
+      margin: 1.25rem 0 0 1.25rem;
+    }
+  }
+
   .flexRowContent {
     &--home-categories-showcase,
     &--mobile-home-categories-showcase,
@@ -91,7 +114,8 @@
     }
 
     &--home-services,
-    &--home-blog {
+    &--home-blog,
+    &--homeBottomSection {
       @include container-main;
     }
 
@@ -208,6 +232,12 @@
 
     &--home-blog-col {
       height: auto !important;
+    }
+
+    &--homeBottomSectionColMobile {
+      @include breakpoint('mobile') {
+        margin-bottom: 2.5rem;
+      }
     }
   }
 }
