--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -146,6 +146,32 @@
       width: 100%;
       margin: 0.75rem 0 0;
     }
+
+    &--homeBottomSectionCategoriesMainTitle,
+    &--homeBottomSectionBrandsMainTitle {
+      height: 33px;
+      color: #332c32;
+      font-size: 28px;
+      font-weight: 500;
+      line-height: 33px;
+      margin: 1.25rem 0;
+
+      @include breakpoint('mobile') {
+        height: 1.5rem;
+        font-size: 20px;
+        line-height: 1.5rem;
+        margin: 0 0 1.5rem;
+      }
+    }
+
+    &--homeBottomSectionCategoriesTitle {
+      height: 1.5rem;
+      color: #291660;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 24px;
+      margin: 0 0 0.75rem;
+    }
   }
 
   .wrapper {
