Fix: Ajustando alinhamento do input na newsletter

--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -148,6 +148,9 @@
     .stretchChildrenWidth {
       width: max-content !important;
     }
+    @include breakpoint("mobile") {
+      justify-content: center;
+    }
   }
 
   &--newsletter-containerShareLinks {
