--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -145,6 +145,7 @@
     max-width: 564px;
     display: flex;
     justify-content: flex-start;
+    margin: 0 20px;
     .stretchChildrenWidth {
       width: max-content !important;
     }
