--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -42,6 +42,10 @@
         &:hover {
           background-color: transparent;
         }
+        @include breakpoint("mobile") {
+          top: 2px;
+          right: 40px;
+        }
       }
       @include breakpoint("mobile") {
         padding: 0;
