--- a/sass/header/vtex.disclosure-layout.scss
+++ b/sass/header/vtex.disclosure-layout.scss
@@ -36,6 +36,9 @@
     top: 40px;
     color: $white;
     font-size: 14px;
+    max-width: 1313px;
+    text-align: center;
+    overflow: hidden;
   }
 }
 
