--- a/sass/home/vtex.store-link.scss
+++ b/sass/home/vtex.store-link.scss
@@ -140,6 +140,7 @@
     color: #1B0E41;
     font-weight: 500;
     padding-right: 2px;
+    align-items: center;
     @media screen and (max-width: 768px) {
       display: none;
     }
